* usageNotifications typo * mobile differences is a followup, not an optional * remove credit or debit card information question * fix bullet formatting for ongoing support * fix bullet points for customisation description * add http request/response status and active numbers to metrics hosting question * Tweak wording for validation on lists against word/char limits * tweak scaling/scaling type questions * reformat service categories and fix validation error messages * (new tab) -> (link opens in a new tab) in links * Personnel -> Staff in manifest * Tweak question+hint for pricing document upload question * add period to support response times question * typo in system requirements advice * Remove ongoingSupportServicesList * Change 'software and hosting' -> 'hosting and software' * remove hints and put them in brackets * Government -> government * Tweak question/hint for SFIA rate card * remove question advice, merge with radios option * add question advice to all cloud security questions * supplier declaration tweaks * missing opening smart quotes * Add question_advice to ongoingSupportDescription * Add security section

--- a/frameworks/g-cloud-9/manifests/edit_submission.yml
+++ b/frameworks/g-cloud-9/manifests/edit_submission.yml
@@ -42,6 +42,12 @@
   questions:
     - multiqQAAndTesting
 
+- name: Security testing
+  editable: false
+  edit_questions: true
+  questions:
+    - multiqSecurityTesting
+
 - name: Training
   editable: false
   edit_questions: true
@@ -191,7 +197,7 @@
     - incidentManagementType
     - incidentManagementApproach
 
-- name: Personnel security
+- name: Staff security
   editable: false
   edit_questions: true
   questions:
@@ -230,7 +236,6 @@
     - multiqStandardsISOIEC27001
     - multiqStandardsISO28000
     - multiqStandardsCSASTAR
-    - creditOrDebitCardInformation
     - multiqStandardsPCI
     - multiqAccreditationsOther
 
