--- a/frameworks/g-cloud-9/questions/services/emailOrTicketingSupportResponseTimes.yml
+++ b/frameworks/g-cloud-9/questions/services/emailOrTicketingSupportResponseTimes.yml
@@ -1,6 +1,6 @@
 name: Support response times
 question: How quickly do you respond to questions?
-question_advice: Say if response times are different at weekends
+question_advice: Say if response times are different at weekends.
 
 hidden: true
 depends:
