--- a/frameworks/g-cloud-9/questions/services/ongoingSupportServices.yml
+++ b/frameworks/g-cloud-9/questions/services/ongoingSupportServices.yml
@@ -6,18 +6,14 @@ depends:
   - "on": lot
     being:
       - cloud-support
-followup:
-  ongoingSupportServicesList:
-    - supplier
-    - third_party
 
 type: checkboxes
 options:
-  - label: Buyer software or hosting
+  - label: Buyer hosting or software
     value: buyer
-  - label: Software or hosting provided by your organisation
+  - label: Hosting or software provided by your organisation
     value: supplier
-  - label: Software or hosting provided by a third-party organisation
+  - label: Hosting or software provided by a third-party organisation
     value: third_party
 
 validations:
