--- a/frameworks/g-cloud-9/questions/declaration/understandTool.yml
+++ b/frameworks/g-cloud-9/questions/declaration/understandTool.yml
@@ -1,3 +1,3 @@
 name: Completing the declaration and adding a service
-question: Do you understand that you must complete both the supplier declaration and add at least one service before your application to G-Cloud&nbsp;9 can be considered?
+question: Do you understand that you must make the supplier declaration and mark at least one service as complete before your application to G-Cloud&nbsp;9 can be considered?
 type: boolean
