--- a/frameworks/g-cloud-9/questions/services/APIAutomationToolsOther.yml
+++ b/frameworks/g-cloud-9/questions/services/APIAutomationToolsOther.yml
@@ -15,8 +15,8 @@ validations:
   - name: answer_required
     message: You need to answer this question.
   - name: under_10_words
-    message: Each API automation tool must be no more than 10 words.
+    message: You can’t write more than 10 words for each API automation tool.
   - name: max_items_limit
     message: You must have 10 or fewer API automation tools.
   - name: under_character_limit
-    message: Each API automation tool must be no more than 100 characters.
+    message: You can’t write more than 100 characters for each API automation tool.
