--- a/frameworks/g-cloud-9/questions/services/configurationAndChangeManagementType.yml
+++ b/frameworks/g-cloud-9/questions/services/configurationAndChangeManagementType.yml
@@ -1,5 +1,9 @@
 name: Configuration and change management type
 question: Which configuration and change management processes does your organisation comply with?
+question_advice: >
+  Read about the government’s <a
+  href="https://www.ncsc.gov.uk/guidance/cloud-security-principle-5-operational-security#config" target="_blank"
+  rel="noopener noreferrer">5th cloud security principle: ‘Operational security’ (link opens in a new tab)</a>.
 
 depends:
   - "on": lot
