--- a/frameworks/g-cloud-9/questions/services/dataExportFormats.yml
+++ b/frameworks/g-cloud-9/questions/services/dataExportFormats.yml
@@ -1,7 +1,7 @@
 name: Data export formats
 question: What open formats can users export their data in?
 question_advice: >
-  Read about the <a href="https://www.gov.uk/government/publications/open-standards-for-government/viewing-government-documents" target="_blank" rel="noopener noreferrer">open standards requirements for government documents (new tab)</a>.
+  Read about the <a href="https://www.gov.uk/government/publications/open-standards-for-government/viewing-government-documents" target="_blank" rel="noopener noreferrer">open standards requirements for government documents (link opens in a new tab)</a>.
 
 depends:
   - "on": lot
