--- a/frameworks/g-cloud-9/questions/services/dataExportFormatsOther.yml
+++ b/frameworks/g-cloud-9/questions/services/dataExportFormatsOther.yml
@@ -13,8 +13,8 @@ list_item_name: data format
 
 validations:
   - name: under_10_words
-    message: Each data format must be no more than 10 words.
+    message: You can’t write more than 10 words for each data format.
   - name: max_items_limit
     message: You must have 10 or fewer data formats.
   - name: under_character_limit
-    message: Each data format must be no more than 100 characters.
+    message: You can’t write more than 100 characters for each data format.
