--- a/frameworks/g-cloud-9/questions/services/dataStorageAndProcessing.yml
+++ b/frameworks/g-cloud-9/questions/services/dataStorageAndProcessing.yml
@@ -1,5 +1,10 @@
 name: Knowledge of data storage and processing locations
 question: Do you know where data is stored and processed?
+question_advice: >
+  Read about the government’s <a
+  href="https://www.ncsc.gov.uk/guidance/cloud-security-principle-2-asset-protection-and-resilience#physical"
+  target="_blank" rel="noopener noreferrer">2nd cloud security principle: ‘Asset protection and resilience’ (link opens
+  in a new tab)</a>.
 
 depends:
   - "on": lot
