--- a/frameworks/g-cloud-9/questions/services/datacentreSecurityStandards.yml
+++ b/frameworks/g-cloud-9/questions/services/datacentreSecurityStandards.yml
@@ -1,5 +1,10 @@
 name: Datacentre security standards
 question: With which standards does your datacentre security setup comply?
+question_advice: >
+  Read about the government’s <a
+  href="https://www.ncsc.gov.uk/guidance/cloud-security-principle-2-asset-protection-and-resilience#dataCentre"
+  target="_blank" rel="noopener noreferrer">2nd cloud security principle: ‘Asset protection and resilience’ (link opens
+  in a new tab)</a>.
 
 depends:
   - "on": lot
