--- a/frameworks/g-cloud-9/questions/services/devicesUsersManageTheServiceThrough.yml
+++ b/frameworks/g-cloud-9/questions/services/devicesUsersManageTheServiceThrough.yml
@@ -1,7 +1,7 @@
 name: Devices users manage the service through
 question: Which devices can be used to manage the service?
 question_advice: >
-  Read about the <a href="https://www.ncsc.gov.uk/guidance/systems-administration-architectures" target="_blank" rel="noopener noreferrer">systems administration models (new tab)</a>
+  Read about the <a href="https://www.ncsc.gov.uk/guidance/systems-administration-architectures" target="_blank" rel="noopener noreferrer">systems administration models (link opens in a new tab)</a>
   that can be used to design the administration approach for IT systems.
 
 depends:
@@ -17,14 +17,15 @@ options:
     value: dedicated_device_on_government_network
   - label: Dedicated device over multiple services or networks
     value: dedicated_device_over_multiple_networks
-  - label: Any device but through a bastion host
+  - label: >
+      Any device but through a bastion host (a bastion host is a server that provides access to a private network from
+      an external network such as the internet)
     value: any_device_using_bastion_host
-    description: >
-      A bastion host is a server that provides access to a private network from an external
-      network such as the internet
-  - label: Directly from any device which may also be used for normal business
+
+  - label: >
+      Directly from any device which may also be used for normal business (for example web browsing or viewing external
+      email)
     value: any_device
-    description: For example web browsing or viewing external email
 
 validations:
   - name: answer_required
