--- a/frameworks/g-cloud-9/questions/services/documentationFormatsOther.yml
+++ b/frameworks/g-cloud-9/questions/services/documentationFormatsOther.yml
@@ -13,8 +13,8 @@ list_item_name: documentation format
 
 validations:
   - name: under_10_words
-    message: Each documentation format must be no more than 10 words.
+    message: You can’t write more than 10 words for each documentation format.
   - name: max_items_limit
     message: You must have 10 or fewer documentation formats.
   - name: under_character_limit
-    message: Each documentation format must be no more than 100 characters.
+    message: You can’t write more than 100 characters for each documentation format.
