--- a/frameworks/g-cloud-9/questions/services/incidentManagementType.yml
+++ b/frameworks/g-cloud-9/questions/services/incidentManagementType.yml
@@ -1,5 +1,10 @@
 name: Incident management type
 question: Which incident management processes does your organisation comply with?
+question_advice: >
+  Read about the government’s <a
+  href="https://www.ncsc.gov.uk/guidance/cloud-security-principle-5-operational-security#incident" target="_blank"
+  rel="noopener noreferrer">5th cloud security principle: ‘Operational security’ (link opens in a new tab)</a>.
+
 depends:
   - "on": lot
     being:
