--- a/frameworks/g-cloud-9/questions/services/metricsHostingWhatOther.yml
+++ b/frameworks/g-cloud-9/questions/services/metricsHostingWhatOther.yml
@@ -13,8 +13,8 @@ list_item_name: infrastructure or application metric
 
 validations:
   - name: under_10_words
-    message: Each infrastructure or application metric must be no more than 10 words.
+    message: You can’t write more than 10 words for each infrastructure or application metric.
   - name: max_items_limit
     message: You must have 10 or fewer infrastructure or application metrics.
   - name: under_character_limit
-    message: Each infrastructure or application metric must be no more than 100 characters.
+    message: You can’t write more than 100 characters for each infrastructure or application metric.
