--- a/frameworks/g-cloud-9/questions/services/ongoingSupport.yml
+++ b/frameworks/g-cloud-9/questions/services/ongoingSupport.yml
@@ -1,11 +1,11 @@
 name: Ongoing support services
-question: Do you support cloud software or hosting services?
+question: Do you support cloud hosting or software services?
 question_advice: >
   Types of cloud support include:
 
-  - user management
-  - service management
-  - helpdesk support
+    - user management
+    - service management
+    - helpdesk support
 
 depends:
   - "on": lot
