--- a/frameworks/g-cloud-9/questions/services/ongoingSupportDescription.yml
+++ b/frameworks/g-cloud-9/questions/services/ongoingSupportDescription.yml
@@ -1,5 +1,6 @@
 name: How the support service works
-question: How do you support cloud software or hosting services?
+question: How do you support cloud hosting or software services?
+question_advice: Include the hosting or software services you support.
 
 hidden: true
 depends:
