--- a/frameworks/g-cloud-9/questions/services/publicSectorNetworksOther.yml
+++ b/frameworks/g-cloud-9/questions/services/publicSectorNetworksOther.yml
@@ -15,8 +15,8 @@ validations:
   - name: answer_required
     message: You need to answer this question.
   - name: under_10_words
-    message: Each public sector network must be no more than 10 words.
+    message: You can’t write more than 10 words for each public sector network.
   - name: max_items_limit
     message: You must have 10 or fewer public sector networks.
   - name: under_character_limit
-    message: Each public sector network must be no more than 100 characters.
+    message: You can’t write more than 100 characters for each public sector network.
