--- a/frameworks/g-cloud-9/questions/services/secureDevelopment.yml
+++ b/frameworks/g-cloud-9/questions/services/secureDevelopment.yml
@@ -1,10 +1,9 @@
 name: Approach to secure software development best practice
 question: How does your organisation demonstrate that it adheres to best practice in secure software development?
 question_advice: >
-  <a href="https://www.ncsc.gov.uk/guidance/cloud-security-standards-and-definitions" target="_blank" rel="noopener noreferrer">CESG CPA Build Standard (new tab)</a>,
-  <a href="https://www.ncsc.gov.uk/guidance/cloud-security-standards-and-definitions" target="_blank" rel="noopener noreferrer">ISO/IEC 27034 (new tab)</a>,
-  <a href="https://www.ncsc.gov.uk/guidance/cloud-security-standards-and-definitions" target="_blank" rel="noopener noreferrer">ISO/IEC 27001 (new tab)</a>, or
-  <a href="https://www.ncsc.gov.uk/guidance/cloud-security-standards-and-definitions" target="_blank" rel="noopener noreferrer">CSA CCM v3.0 (new tab)</a>
+  Read about the government’s <a
+  href="https://www.ncsc.gov.uk/guidance/cloud-security-principle-7-secure-development" target="_blank"
+  rel="noopener noreferrer">7th cloud security principle: ‘Secure development’ (link opens in a new tab)</a>.
 
 depends:
   - "on": lot
@@ -14,7 +13,9 @@ depends:
 
 type: radios
 options:
-  - label: Independent review of processes
+  - label: >
+      Independent review of processes (for example CESG CPA Build Standard, ISO/IEC 27034, ISO/IEC 27001 or CSA CCM
+      v3.0)
     value: independent_review
   - label: Conforms to a recognised standard, but self-assessed
     value: recognised_standard
