--- a/frameworks/g-cloud-9/questions/services/serviceFeatures.yml
+++ b/frameworks/g-cloud-9/questions/services/serviceFeatures.yml
@@ -19,6 +19,6 @@ validations:
   - name: max_items_limit
     message: You can have no more than 10 features.
   - name: under_10_words
-    message: Each feature must be no more than 10 words.
+    message: You can’t write more than 10 words for each feature.
   - name: under_character_limit
-    message: Each feature must be no more than 100 characters.
+    message: You can’t write more than 100 characters for each feature.
