--- a/frameworks/g-cloud-9/questions/services/setupAndMigrationServiceSpecificList.yml
+++ b/frameworks/g-cloud-9/questions/services/setupAndMigrationServiceSpecificList.yml
@@ -12,9 +12,9 @@ list_item_name: cloud hosting or software service
 
 validations:
   - name: under_10_words
-    message: Each cloud hosting or software service must be no more than 10 words.
+    message: You can’t write more than 10 words for each cloud hosting or software service.
   - name: max_items_limit
     message: You must have 10 or fewer cloud hosting or software services.
   - name: under_character_limit
-    message: Each cloud hosting or software service must be no more than 100 characters.
+    message: You can’t write more than 100 characters for each cloud hosting or software service.
 
