--- a/frameworks/g-cloud-9/questions/services/systemRequirements.yml
+++ b/frameworks/g-cloud-9/questions/services/systemRequirements.yml
@@ -1,7 +1,7 @@
 name: System requirements
 question: What system requirements does your service have?
 question_advice: >
-  Examples of systems requirements might be whether buyers have specific software licences or anti-virus technology
+  Examples of system requirements might be whether buyers have specific software licences or anti-virus technology
   for virtual machines.
 hint: 10 words for each requirement, 10 requirements maximum.
 
@@ -20,6 +20,6 @@ validations:
   - name: max_items_limit
     message: You can have no more than 10 system requirements.
   - name: under_10_words
-    message: Each system requirement must be no more than 10 words.
+    message: You can’t write more than 10 words for each system requirement.
   - name: under_character_limit
-    message: Each system requirement must be no more than 100 characters.
+    message: You can’t write more than 100 characters for each system requirement.
