--- a/frameworks/g-cloud-9/questions/services/virtualisationTechnologiesUsed.yml
+++ b/frameworks/g-cloud-9/questions/services/virtualisationTechnologiesUsed.yml
@@ -32,8 +32,8 @@ validations:
   - name: answer_required
     message: You need to answer this question.
   - name: under_10_words
-    message: Each virtualisation technology must be no more than 10 words.
+    message: You can’t write more than 10 words for each virtualisation technology.
   - name: max_items_limit
     message: You must have 10 or fewer virtualisation technology.
   - name: under_character_limit
-    message: Each virtualisation technology must be no more than 100 characters.
+    message: You can’t write more than 100 characters for each virtualisation technology.
