Change (new tab) to (link opens in a new tag)

--- a/frameworks/g-cloud-9/questions/declaration/MI.yml
+++ b/frameworks/g-cloud-9/questions/declaration/MI.yml
@@ -1,5 +1,5 @@
 name: Providing management information (MI)
 question: >
   Do you confirm that you’re prepared to provide all the monthly G-Cloud&nbsp;9-related management information (MI)
-  to CCS as outlined in the <a href="/suppliers/frameworks/g-cloud-9" target="_blank" rel="noopener noreferrer">reporting template (new tab)</a>?
+  to CCS as outlined in the <a href="/suppliers/frameworks/g-cloud-9" target="_blank" rel="noopener noreferrer">reporting template (link opens in a new tab)</a>?
 type: boolean
