--- a/frameworks/g-cloud-9/questions/declaration/helpBuyersComplyTechnologyCodesOfPractice.yml
+++ b/frameworks/g-cloud-9/questions/declaration/helpBuyersComplyTechnologyCodesOfPractice.yml
@@ -1,4 +1,4 @@
 name: Technology Code of Practice
 question: >
-  Do you agree to help the government work in ways which are consistent with the <a href="https://www.gov.uk/service-manual/technology/code-of-practice.html" target="_blank" rel="noopener noreferrer">Technology Code of Practice (new tab)</a>?
+  Do you agree to help the government work in ways which are consistent with the <a href="https://www.gov.uk/service-manual/technology/code-of-practice.html" target="_blank" rel="noopener noreferrer">Technology Code of Practice (link opens in a new tab)</a>?
 type: boolean
