--- a/frameworks/g-cloud-9/questions/declaration/organisationSize.yml
+++ b/frameworks/g-cloud-9/questions/declaration/organisationSize.yml
@@ -8,4 +8,4 @@ options:
   - label: large
 
 hint: >
-  Check the <a href="http://ec.europa.eu/growth/smes/business-friendly-environment/sme-definition/index_en.htm" target="_blank" rel="noopener noreferrer">size of your organisation (new tab)</a>
+  Check the <a href="http://ec.europa.eu/growth/smes/business-friendly-environment/sme-definition/index_en.htm" target="_blank" rel="noopener noreferrer">size of your organisation (link opens in a new tab)</a>
