add custom content for some cloud-support questions

--- a/frameworks/g-cloud-9/questions/services/multiqServiceFeaturesAndBenefitsHostingAndSoftware.yml
+++ b/frameworks/g-cloud-9/questions/services/multiqServiceFeaturesAndBenefitsHostingAndSoftware.yml
@@ -1,3 +1,4 @@
+id: multiqServiceFeaturesAndBenefits
 question: Service features and benefits
 name: Service features and benefits
 
@@ -6,9 +7,8 @@ depends:
     being:
       - cloud-hosting
       - cloud-software
-      - cloud-support
 
 type: multiquestion
 questions:
-  - serviceFeatures
-  - serviceBenefits
+  - serviceFeaturesHostingAndSoftware
+  - serviceBenefitsHostingAndSoftware
