Fix typo in 'compatible operating systems' question.
 - https://trello.com/c/ZpPRw8Pf/292-browser-client-side-app-question-wording

--- a/frameworks/g-cloud-9/questions/services/installationCompatibleOperatingSystems.yml
+++ b/frameworks/g-cloud-9/questions/services/installationCompatibleOperatingSystems.yml
@@ -1,5 +1,5 @@
 name: Compatible operating systems
-question: Which operation systems does your service work with?
+question: Which operating systems does your service work with?
 
 hidden: true
 depends:
