Remove full stop in T&C upload q.
 - https://trello.com/c/tGhKRxb9/293-service-questions-terms-and-conditions-document-remove-full-stop

--- a/frameworks/g-cloud-9/questions/services/termsAndConditionsDocumentURL.yml
+++ b/frameworks/g-cloud-9/questions/services/termsAndConditionsDocumentURL.yml
@@ -1,5 +1,5 @@
 name: Terms and conditions document
-question: Add your terms and conditions document.
+question: Add your terms and conditions document
 hint: >
   This document will not be indexed by search on the Digital Marketplace. Use an Open Document Format (ODF) or PDF/A
   (eg .pdf, .odt). (Maximum file size 5MB.)
