g-cloud-9 declaration questions: add assessment information

--- a/frameworks/g-cloud-9/questions/declaration/bankrupt.yml
+++ b/frameworks/g-cloud-9/questions/declaration/bankrupt.yml
@@ -4,3 +4,7 @@ question: >
 
     - been made bankrupt or the subject of insolvency or winding-up proceedings
 type: boolean
+assessment:
+  passIfIn:
+    - False
+  discretionary: True
