--- a/frameworks/g-cloud-9/questions/declaration/environmentalSocialLabourLaw.yml
+++ b/frameworks/g-cloud-9/questions/declaration/environmentalSocialLabourLaw.yml
@@ -10,3 +10,7 @@ hint:
   Read more about <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/551130/List_of_Mandatory_and_Discretionary_Exclusions.pdf" target="_blank" rel="noopener noreferrer">your obligations in the field of environment, social and labour law (link opens in a new tab)</a>
 
 type: boolean
+assessment:
+  passIfIn:
+    - False
+  discretionary: True
