--- a/frameworks/g-cloud-9/questions/declaration/fraudAndTheft.yml
+++ b/frameworks/g-cloud-9/questions/declaration/fraudAndTheft.yml
@@ -13,3 +13,6 @@ question: >
     - the possession of articles for use in frauds within the meaning of section 6 of the Fraud Act 2006, or the making, adapting, supplying or offering to supply articles for use in frauds within the meaning of section 7 of that Act
 type: boolean
 hint: Answer ‘yes’ if anyone who represents, supervises or has control in your organisation or a partner or parent organisation has been convicted of any of the above.
+assessment:
+  passIfIn:
+    - False
