--- a/frameworks/g-cloud-9/questions/declaration/graveProfessionalMisconduct.yml
+++ b/frameworks/g-cloud-9/questions/declaration/graveProfessionalMisconduct.yml
@@ -4,3 +4,7 @@ question: >
 
     - been guilty of grave professional misconduct
 type: boolean
+assessment:
+  passIfIn:
+    - False
+  discretionary: True
