--- a/frameworks/g-cloud-9/questions/declaration/influencedContractingAuthority.yml
+++ b/frameworks/g-cloud-9/questions/declaration/influencedContractingAuthority.yml
@@ -4,3 +4,7 @@ question: >
 
     - unduly influenced the decision-making process of the contracting authority
 type: boolean
+assessment:
+  passIfIn:
+    - False
+  discretionary: True
