--- a/frameworks/g-cloud-9/questions/declaration/unspentTaxConvictions.yml
+++ b/frameworks/g-cloud-9/questions/declaration/unspentTaxConvictions.yml
@@ -5,3 +5,7 @@ question: >
     - been found to be incorrect as of 1 April 2013
     - given rise to a criminal conviction for tax-related offences which is unspent, or to civil penalty for fraud or evasion
 type: boolean
+assessment:
+  passIfIn:
+    - False
+  discretionary: True
