--- a/frameworks/g-cloud-9/questions/declaration/10WorkingDays.yml
+++ b/frameworks/g-cloud-9/questions/declaration/10WorkingDays.yml
@@ -3,3 +3,6 @@ question: >
   Do you agree to sign and return the final framework agreement, without changing it, within 10 working days of it being issued by the Crown Commercial Service?
 
 type: boolean
+assessment:
+  passIfIn:
+    - True
