--- a/frameworks/g-cloud-9/questions/declaration/accurateInformation.yml
+++ b/frameworks/g-cloud-9/questions/declaration/accurateInformation.yml
@@ -2,3 +2,6 @@ name: Declaration accuracy
 question: >
   Are all the answers in your supplier declaration truthful?
 type: boolean
+assessment:
+  passIfIn:
+    - True
