--- a/frameworks/g-cloud-9/questions/declaration/conspiracy.yml
+++ b/frameworks/g-cloud-9/questions/declaration/conspiracy.yml
@@ -10,3 +10,6 @@ question: >
 
 type: boolean
 hint: Answer ‘yes’ if anyone who represents, supervises or has control in your organisation or a partner or parent organisation has been convicted of any of the above.
+assessment:
+  passIfIn:
+    - False
