--- a/frameworks/g-cloud-9/questions/declaration/corruptionBribery.yml
+++ b/frameworks/g-cloud-9/questions/declaration/corruptionBribery.yml
@@ -11,3 +11,6 @@ question: >
 
 type: boolean
 hint: Answer ‘yes’ if anyone who represents, supervises or has control in your organisation or a partner or parent organisation has been convicted of any of the above.
+assessment:
+  passIfIn:
+    - False
