--- a/frameworks/g-cloud-9/questions/declaration/distortedCompetition.yml
+++ b/frameworks/g-cloud-9/questions/declaration/distortedCompetition.yml
@@ -4,3 +4,7 @@ question: >
 
     - distorted competition through prior involvement in the procurement procedure as described in <a href="http://www.legislation.gov.uk/uksi/2015/102/regulation/41/made" target="_blank" rel="noopener noreferrer">Regulation 41 of the Public Contracts Regulations 2015 (link opens in a new tab)</a>
 type: boolean
+assessment:
+  passIfIn:
+    - False
+  discretionary: True
