--- a/frameworks/g-cloud-9/questions/declaration/distortingCompetition.yml
+++ b/frameworks/g-cloud-9/questions/declaration/distortingCompetition.yml
@@ -4,3 +4,7 @@ question: >
 
     - entered into agreements with other economic operators aimed at distorting competition
 type: boolean
+assessment:
+  passIfIn:
+    - False
+  discretionary: True
