--- a/frameworks/g-cloud-9/questions/declaration/informationChanges.yml
+++ b/frameworks/g-cloud-9/questions/declaration/informationChanges.yml
@@ -2,3 +2,6 @@ name: Changes to information
 question: >
   Do you agree to inform the Crown Commercial Service as soon as possible if there are any changes to the information you’re providing in this supplier declaration?
 type: boolean
+assessment:
+  passIfIn:
+    - True
