--- a/frameworks/g-cloud-9/questions/declaration/readUnderstoodGuidance.yml
+++ b/frameworks/g-cloud-9/questions/declaration/readUnderstoodGuidance.yml
@@ -4,3 +4,6 @@ question: >
 hint: >
   You can read about how to apply in the <a href="https://www.gov.uk/guidance/g-cloud-suppliers-guide#how-to-apply" target="_blank" rel="noopener noreferrer">G-Cloud suppliers’ guide (link opens in a new tab)</a>.
 type: boolean
+assessment:
+  passIfIn:
+    - True
