--- a/frameworks/g-cloud-9/questions/declaration/significantOrPersistentDeficiencies.yml
+++ b/frameworks/g-cloud-9/questions/declaration/significantOrPersistentDeficiencies.yml
@@ -4,3 +4,7 @@ question: >
 
     - shown significant or persistent deficiencies in the performance of a substantive requirement under a prior public contract, a prior contract with a contracting entity, or a prior concession contract, which led to early termination of the contract, damages or other comparable sanctions
 type: boolean
+assessment:
+  passIfIn:
+    - False
+  discretionary: True
