--- a/frameworks/g-cloud-9/questions/declaration/termsOfParticipation.yml
+++ b/frameworks/g-cloud-9/questions/declaration/termsOfParticipation.yml
@@ -2,3 +2,6 @@ name: Invitation to apply
 question: >
   Do you agree to comply with the terms of the <a href="/suppliers/frameworks/g-cloud-9" target="_blank" rel="noopener noreferrer">G-Cloud&nbsp;9 ‘invitation to apply’ (link opens in a new tab)</a>?
 type: boolean
+assessment:
+  passIfIn:
+    - True
