--- a/frameworks/digital-outcomes-and-specialists-2/questions/briefs/startDate.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/briefs/startDate.yml
@@ -2,18 +2,17 @@ name: Latest start date
 question: Latest start date
 question_advice: |
   Say when you need suppliers to start work. When you shortlist, you can exclude suppliers who can’t start by this date.
-hint: 'eg 31/12/2020'
-type: text
+hint: 'eg 31 12 2020'
+type: date
 depends:
   - "on": "lot"
     being:
       - digital-outcomes
       - digital-specialists
 validations:
-  -
-    name: answer_required
+  - name: answer_required
     message: 'You need to answer this question.'
-  -
-    name: under_character_limit
-    message: "Your start date must be no more than 100 characters."
+  - name: invalid_format
+    message: "Your answer must be a valid date."
+
 empty_message: Set latest start date
