First filter group is to be called 'categories' so it can be extracted.
 - categories filter will have special UI

--- a/frameworks/g-cloud-9/manifests/search_filters.yml
+++ b/frameworks/g-cloud-9/manifests/search_filters.yml
@@ -1,5 +1,6 @@
 -
-  name: Search filters
+  name: Categories
+  slug: categories
   questions:
     - serviceCategoriesSoftware
     - serviceCategoriesHosting
