Fix description heading for summary page
Did this because of ticket http://trello.com/whatever

--- a/frameworks/g-cloud-9/questions/services/serviceDescription.yml
+++ b/frameworks/g-cloud-9/questions/services/serviceDescription.yml
@@ -1,4 +1,4 @@
-name: Service description
+name: Service descriptions are awesome
 question: Provide a summary describing what your service is for.
 
 depends:
