--- a/frameworks/g-cloud-9/messages/urls.yml
+++ b/frameworks/g-cloud-9/messages/urls.yml
@@ -1,5 +1,5 @@
-framework_agreement_url: "https://www.gov.uk/government/publications/g-cloud-9"
+framework_agreement_url: "https://www.gov.uk/government/publications/g-cloud-9-framework-agreement"
 
-framework_agreement_pdf_url: ""
+framework_agreement_pdf_url: "https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/612624/g-cloud-9-framework-agreement.pdf"
 
 supplier_guide_url: "https://www.gov.uk/guidance/g-cloud-suppliers-guide#how-to-apply"
