--- a/frameworks/g-cloud-9/messages/advice.yml
+++ b/frameworks/g-cloud-9/messages/advice.yml
@@ -5,3 +5,18 @@ use_of_service_data: >
     - may be used as filters
     - will appear on your service description page
     - should help buyers review and compare services
+
+lots:
+  - slug: cloud-hosting
+    body: >
+      Find cloud platform or infrastructure services to help you:
+
+        - deploy, manage and run software
+        - provision and use processing, storage or networking resources
+    advice: eg content delivery networks or load balancing services
+  - slug: cloud-software
+    body: Find software applications that are accessed over the internet and hosted in the cloud.
+    advice: eg accounting tools or customer service management software
+  - slug: cloud-support
+    body: Find cloud support services to help you set up and maintain your cloud software or hosting services.
+    advice: eg migration services or ongoing support
