Some initial filter labels to demonstrate usage of new filter_label fields.
 - also ignoring some radio options for filtering purposes with filter_ignore.

https://trello.com/c/vZP7vbGP/412-labelling-of-filters

--- a/frameworks/g-cloud-9/manifests/search_filters.yml
+++ b/frameworks/g-cloud-9/manifests/search_filters.yml
@@ -5,3 +5,18 @@
     - serviceCategoriesSoftware
     - serviceCategoriesHosting
     - serviceCategoriesSupport
+-
+  name: User support
+  slug: user-support
+  questions:
+    - emailSupport
+    - phoneSupport
+    - webChatSupport
+-
+  name: Government security clearances
+  questions:
+     - governmentSecurityClearances
+-
+  name: Security certification
+  questions:
+    - standardsCSASTAR
