--- a/frameworks/g-cloud-9/questions/services/standardsCSASTAR.yml
+++ b/frameworks/g-cloud-9/questions/services/standardsCSASTAR.yml
@@ -2,7 +2,7 @@ name: CSA STAR certification
 question: >
   Do you have a current CSA Security, Trust & Assurance Registry (STAR) certification that covers the security of
   your service?
-
+filter_label: CSA STAR
 depends:
   - "on": lot
     being:
