--- a/frameworks/g-cloud-9/questions/services/webChatSupport.yml
+++ b/frameworks/g-cloud-9/questions/services/webChatSupport.yml
@@ -22,10 +22,13 @@ type: radios
 options:
   - label: "Yes"
     value: "yes"
+    filter_label: "Web chat"
   - label: Yes, at an extra cost
     value: yes_extra_cost
+    filter_label: "Web chat (extra cost)"
   - label: "No"
     value: "no"
+    filter_ignore: true
 
 validations:
   - name: answer_required
