Replace Email support question with "email or ticketing"
 - "email" question was out-of-date and replaced - has now been deleted
 - unlikely to survive into production

https://trello.com/c/vZP7vbGP/412-labelling-of-filters

--- a/frameworks/g-cloud-9/manifests/search_filters.yml
+++ b/frameworks/g-cloud-9/manifests/search_filters.yml
@@ -8,7 +8,7 @@
 -
   name: User support
   questions:
-    - emailSupport
+    - emailOrTicketingSupport
     - phoneSupport
     - webChatSupport
 -
