--- a/frameworks/g-cloud-9/questions/services/emailOrTicketingSupport.yml
+++ b/frameworks/g-cloud-9/questions/services/emailOrTicketingSupport.yml
@@ -19,10 +19,13 @@ type: radios
 options:
   - label: "Yes"
     value: "yes"
+    filter_label: "Email/online ticketing"
   - label: Yes, at extra cost
     value: yes_extra_cost
+    filter_label: "Email/online ticketing (extra cost)"
   - label: "No"
     value: "no"
+    filter_ignore: true
 
 validations:
   - name: answer_required
